Intro P2 Index entry

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -19,4 +19,5 @@ I am currently a fresh graduate from the [National Institute of Technology, Silc
 Here are my blogs.
 
 - mnemofs
-    - [Introduction Part 1](./mnemofs/intro_p1)
+    - [Introduction Part I](./mnemofs/intro_p1)
+    - [Introduction Part II](./mnemofs/intro_p2)
