--- a/pages/mnemofs/intro_p2.mdx
+++ b/pages/mnemofs/intro_p2.mdx
@@ -97,7 +97,7 @@ Again, redistribution of pain.
 So in a way similar to the communication between OS and FS, the FS can now interact with the storage device through the OS using their respective interfaces like:
 
 ```c
-int xfs_open_from_path(char *path) {
+int abcdfs_open_from_path(char *path) {
     // code
 
     struct device dev = get_device_from_path(path);
