--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,3 +21,4 @@ Here are my blogs.
 - mnemofs
     - [Introduction Part I](./mnemofs/intro_p1)
     - [Introduction Part II](./mnemofs/intro_p2)
+    - [Introduction Part II](./mnemofs/intro_p3)
