--- a/pages/mnemofs/intro_p1.mdx
+++ b/pages/mnemofs/intro_p1.mdx
@@ -1,6 +1,6 @@
 import { Cards, Callout, Card } from 'nextra/components'
 
-export let parttwo = "./intro_p2";
+export let next = "./intro_p2";
 
 # Introduction Part I | mnemofs
 
@@ -93,12 +93,12 @@ Inodes are very much optional too, and it depends on the file system on how they
 
 ## Conclusion
 
-So, we glanced over the basic knowledge required to start learning about file systems. The fun and games end here, and in [Part II]({parttwo}), it's time to dive into the depths of file systems, and file system development.
+So, we glanced over the basic knowledge required to start learning about file systems. The fun and games end here, and in [Part II]({next}), it's time to dive into the depths of file systems, and file system development.
 
 
 ---
 
 <Cards>
 <Card icon="" title="" href="" />
-<Card icon="❱&emsp;" title="Part II" href={parttwo} />
+<Card icon="❱&emsp;" title="Part II" href={next} />
 </Cards>
