--- a/pages/mnemofs/intro_p3.mdx
+++ b/pages/mnemofs/intro_p3.mdx
@@ -19,7 +19,7 @@ These are file systems that represent the used storage space in the form of a tr
 
 They divide the storage into various blocks in which files are stored. Any updates to the files are done in-place. Let's say the block `x` contains my file, and if I want to update the file, the same block is re-written with the new updated file's content.
 
-Can you see the problem? Suppose my block is 256 B in size, and that contains a file of size 256 B as well. Say some random bytes, say `13`th, `19`th, `100`th and `105`th bytes, are to be updated to new values by your computer. Let's say the writes can be done at a maximum rate of 1 B at a time. And to add to this, let's say our luck is very bad, and after it has updated the `19`th block, there is a power failure, and the write oepration stops, and so does your computer. Now there is no information on what changes are remaining, or what have been already written.
+Can you see the problem? Suppose my block is 256 B in size, and that contains a file of size 256 B as well. Say some random bytes, say `13`th, `19`th, `100`th and `105`th bytes, are to be updated to new values by your computer. Let's say the writes can be done at a maximum rate of 1 B at a time. And to add to this, let's say our luck is very bad, and after it has updated the `19`th block, there is a power failure, and the write operation stops, and so does your computer. Now there is no information on what changes are remaining, or what have been already written.
 
 You get a situation where some of the file is updated, while the rest of it isn't.
 
@@ -43,7 +43,7 @@ On the other extreme, there are log based file systems that take atomicity **_ve
 
 Any change has a corresponding entry, which is stored in the storage device in a first in first out (FIFO) manner, ie. each new entry is stored after the end of the last stored entry. To recreate a file, all that is needed is to iterate over all of the entries in a queue. Usually each entry has a checksum of the entry suffixed to it.
 
-The checksum is usually a value obtained by hashing an entire log. While reading a entry/log, if the stored checksum does not match with the calculated checksum of the log, the log is discarded as it means that the log was not written properly. If you assume your file system is bug-free, this usually narrows the culprits to power loss.
+The checksum is usually a value obtained by hashing an entire log. While reading an entry/log, if the stored checksum does not match with the calculated checksum of the log, the log is discarded as it means that the log was not written properly. If you assume your file system is bug-free, this usually narrows the culprits to power loss.
 
 It might seem really great initially, but see the problem? It is **very** slow. Suppose each read (one bytes) from the device is one instruction (that's being quite generous as it's 100x slower than reading a value from RAM!), and you have a 4 GiB device. This means 4294967296 B, so that many instructions needed to traverse the entire storage. Ignore any calculations we do with the data, this would take about 1.38 seconds if an Intel i5 10th gen was running on its base frequency of 2.9 GHz (assuming no optimisations). As mentioned, calling it one instruction per read is being generous. This means that every time you open a file, you need to wait 1.38 seconds at the very least. And moreover, the processor used for this calculation is quite a beast in itself.
 
@@ -73,9 +73,9 @@ This is the most popular category of file systems, and this category includes Li
 
 A file system category based on an entirely new way of dealing with this problem is Copy-On-Write (CoW) file systems.
 
-What does CoW mean? You want to update a value? Copy the entire thing and write to that copy. It's similar to how some developers program before learning about the exsitence of version control.
+What does CoW mean? You want to update a value? Copy the entire thing and write to that copy. It's similar to how some developers program before learning about the existence of version control.
 
-Suppose a block (I'll give it a name `x`) is at a location `p`. If you want to update it, you read the entire block in memory, update the necessary parts in memory, and write the updated block to a new location `q`.
+Suppose a block (I'll give it a name `x`) is at a location `p`. If you want to update it, you will read the entire block in memory, update the necessary parts in memory, and write the updated block to a new location `q`.
 
 This sounds simple, but it's a bit more complicated than that when you dive into the nuances of this.
 
