--- a/pages/mnemofs/intro_p2.mdx
+++ b/pages/mnemofs/intro_p2.mdx
@@ -1,7 +1,7 @@
 import { Cards, Card } from 'nextra/components'
 
-export let prev = "./intro_p1";
-export let next = "./intro_p3";
+export let prev = "/mnemofs/intro_p1";
+export let next = "/mnemofs/intro_p3";
 
 # Introduction Part II | mnemofs
 
@@ -133,7 +133,7 @@ This is a very simplified and generalized way in which OS, FS and devices intera
 
 ## Conclusion
 
-Here we learnt how FS interacts with the OS, and in [Part III]({next}), we'll dive into FS and the various solutions that have emerged through the decades to an apparently "simple problem".
+Here we learnt how FS interacts with the OS, and in <a href={next}>Part III</a>, we'll dive into FS and the various solutions that have emerged through the decades to an apparently "simple problem".
 
 ---
 
