--- a/pages/mnemofs/intro_p1.mdx
+++ b/pages/mnemofs/intro_p1.mdx
@@ -93,7 +93,7 @@ Inodes are very much optional too, and it depends on the file system on how they
 
 ## Conclusion
 
-So, we glanced over the basic knowledge required to start learning about file systems. The fun and games end here, and in <a href={next}>Part II</a>, it's time to dive into the depths of file systems, and file system development.
+So, we glanced over the basic knowledge required to start learning about file systems. The fun and games end here, and in Part II, it's time to dive into the depths of file systems, and file system development.
 
 
 ---
