--- a/pages/mnemofs/intro_p3.mdx
+++ b/pages/mnemofs/intro_p3.mdx
@@ -103,7 +103,7 @@ The amount of extra space used by old copies are determined by the aggressivenes
 
 Too many types of file systems, and too many problems. They try to solve some problem, but end up creating another, or solving it partially. Mnemofs is heavily inspired from littlefs, which itself tries to take best of both CoW and journalling file systems and combines it with some ingenious problem solving.
 
-We'll look into mnemofs and its journal in the <a href={next}>next part</a>.
+We'll look into mnemofs and its journal in the next part.
 
 ---
 
