--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,3 +22,6 @@ Here are my blogs.
     - [Introduction Part I](./mnemofs/intro_p1)
     - [Introduction Part II](./mnemofs/intro_p2)
     - [Introduction Part II](./mnemofs/intro_p3)
+    - [Mnemofs](./mnemofs/mnemofs)
+    - [Mnemofs LRU](./mnemofs/lru)
+    - [Mnemofs Journal](./mnemofs/journal)
