--- a/pages/mnemofs/intro_p1.mdx
+++ b/pages/mnemofs/intro_p1.mdx
@@ -1,6 +1,7 @@
 import { Cards, Callout, Card } from 'nextra/components'
 
 export let next = "/mnemofs/intro_p2";
+export let home = "/";
 
 # Introduction Part I | mnemofs
 
@@ -102,3 +103,4 @@ So, we glanced over the basic knowledge required to start learning about file sy
 <Card icon="" title="" href="" />
 <Card icon="❱&emsp;" title="Part II" href={next} />
 </Cards>
+<Card icon="⌂&emsp;" title="Home" href={home} />
