--- a/pages/mnemofs/intro_p2.mdx
+++ b/pages/mnemofs/intro_p2.mdx
@@ -1,6 +1,7 @@
 import { Cards, Card } from 'nextra/components'
 
 export let prev = "/mnemofs/intro_p1";
+export let home = "/";
 export let next = "/mnemofs/intro_p3";
 
 # Introduction Part II | mnemofs
@@ -141,3 +142,5 @@ Here we learnt how FS interacts with the OS, and in Part III, we'll dive into FS
 <Card icon="❰&emsp;" title="Part I" href={prev} />
 <Card icon="❱&emsp;" title="Part III" href={next} />
 </Cards>
+<br/>
+<Card icon="⌂&emsp;" title="Home" href={home} />
