--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -18,10 +18,4 @@ I am currently a fresh graduate from the [National Institute of Technology, Silc
 
 Here are my blogs.
 
-- mnemofs
-    - [Introduction Part I](./mnemofs/intro_p1)
-    - [Introduction Part II](./mnemofs/intro_p2)
-    - [Introduction Part II](./mnemofs/intro_p3)
-    - [Mnemofs](./mnemofs/mnemofs)
-    - [Mnemofs LRU](./mnemofs/lru)
-    - [Mnemofs Journal](./mnemofs/journal)
+- [mnemofs](./mnemofs/mnemofs)
