--- a/pages/mnemofs/mnemofs.mdx
+++ b/pages/mnemofs/mnemofs.mdx
@@ -19,7 +19,7 @@ Here are the blogs that cover this in depth:
 - [Mnemofs Journal](./mnemofs/journal)
 - [Mnemofs Master Node](./mnemofs/mn)
 - [Mnemofs Block Allocator](./mnemofs/ba)
-- [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blog'](./mnemofs/mideval)
+- [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blogs](./mnemofs/mideval)
 
 ---
 
