--- a/pages/mnemofs/mnemofs.mdx
+++ b/pages/mnemofs/mnemofs.mdx
@@ -11,15 +11,15 @@ mnemofs consists of several components, and thus, we approach it one by one. Bab
 
 Here are the blogs that cover this in depth:
 
-- [Introduction Part I](../mnemofs/intro_p1)
-- [Introduction Part II](../mnemofs/intro_p2)
-- [Introduction Part II](../mnemofs/intro_p3)
-- [Mnemofs](../mnemofs/mnemofs)
-- [Mnemofs LRU](../mnemofs/lru)
-- [Mnemofs Journal](../mnemofs/journal)
-- [Mnemofs Master Node](../mnemofs/mn)
-- [Mnemofs Block Allocator](../mnemofs/ba)
-- [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blogs](../mnemofs/mideval)
+- [Introduction Part I](./intro_p1)
+- [Introduction Part II](./intro_p2)
+- [Introduction Part II](./intro_p3)
+- [Mnemofs](./mnemofs)
+- [Mnemofs LRU](./lru)
+- [Mnemofs Journal](./journal)
+- [Mnemofs Master Node](./mn)
+- [Mnemofs Block Allocator](./ba)
+- [GSoC '24 @ Apache NuttX, Mid Term Evaluation Blogs](./mideval)
 
 ---
 
