--- a/pages/mnemofs/intro_p1.mdx
+++ b/pages/mnemofs/intro_p1.mdx
@@ -100,7 +100,8 @@ So, we glanced over the basic knowledge required to start learning about file sy
 ---
 
 <Cards>
-<Card icon="" title="" href="" />
+<Card icon="" title="" href="#" />
 <Card icon="❱&emsp;" title="Part II" href={next} />
 </Cards>
+<br/>
 <Card icon="⌂&emsp;" title="Home" href={home} />
