--- a/pages/mnemofs/mnemofs.mdx
+++ b/pages/mnemofs/mnemofs.mdx
@@ -7,7 +7,7 @@ export let next = "/mnemofs/lru";
 
 Mnemofs is a NAND Flash File System designed and built for NuttX as part of the [Google Summer of Code 2024 program](https://lists.apache.org/thread/vnlyzosgp3rbc9jqf64np126rjhntmrq). Mnemofs is designed to be a middle ground between flash storage consumption, memory consumption, wear and speed. It sacrifices a little bit of everything, and ends up being acceptably good in all of them, instead of sacrificing multiple aspects, and being good in one.
 
-mnemofs consists of several components, and thus, we approach it one by one. Baby steps.
+Mnemofs consists of several components, and thus, we approach it one by one. Baby steps.
 
 Here are the blogs that cover this in depth:
 
